--- a/AngularApp/projects/diagnostic-data/src/lib/components/feedback/feedback.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/feedback/feedback.component.html
@@ -1,44 +1,43 @@
-<div *ngIf="showFeedbackForm" style="padding-top:5px;">
-    <div class="review-header" *ngIf="!isModal">
+<div *ngIf="showFeedbackForm" class="feedback-form">
+    <div class="review-header">
         <h1>
-            How helpful was this?</h1>
+            From 1 to 5 stars, how helpful was this?</h1>
     </div>
     <div class="review-container">
-        <div class="row" style="padding: 15px, 0px, 15px, 15px;max-width: 350px; border-right: rgb(169, 169, 169); margin-left:0px">
+        <div class="row rating-div">
             <div>
-                <fieldset class="rating" style="width:150px; margin-top: 0px">
-                    <input type="radio" id="star5" name="rating" value="5" />
-                    <label class="full" [ngStyle]="{'color':rating<5 ? '#ddd': '#FFD700'}" for="star5" (click)="setStar(5, 'It is very helpful!')"></label>
-                    <input type="radio" id="star4half" name="rating" (click)="setStar(4.5, 'It is very helpful!')">
-                    <label class="half" [ngStyle]="{'color':rating<4.5 ? '#ddd': '#FFD700'}" for="star4half" title="It is very helpful! - 4.5 stars"></label>
-                    <input type="radio" id="star4" name="rating" value="4" (click)="setStar(4, 'It is helpful!')" />
-                    <label class="full" [ngStyle]="{'color':rating<4 ? '#ddd': '#FFD700'}" for="star4" title="It is helpful! - 4 stars"></label>
-                    <input type="radio" id="star3half" name="rating" value="3 and a half" (click)="setStar(3.5, 'It is helpful!')" />
-                    <label class="half" [ngStyle]="{'color':rating<3.5 ? '#ddd': '#FFD700'}" for="star3half" title="It is helpful!- 3.5 stars"></label>
-                    <input type="radio" id="star3" name="rating" value="3" (click)="setStar(3, 'It is okay.')" />
-                    <label class="full" [ngStyle]="{'color':rating<3 ? '#ddd': '#FFD700'}" for="star3" title="It is okay. - 3 stars"></label>
-                    <input type="radio" id="star2half" name="rating" value="2 and a half" (click)="setStar(2.5, 'It is okay.')" />
-                    <label class="half" [ngStyle]="{'color':rating<2.5 ? '#ddd': '#FFD700'}" for="star2half" title="It is okay.- 2.5 stars"></label>
-                    <input type="radio" id="star2" name="rating" value="2" (click)="setStar(2, 'It could be better.')" />
-                    <label class="full" [ngStyle]="{'color':rating<2 ? '#ddd': '#FFD700'}" for="star2" title="It could be better. - 2 stars"></label>
-                    <input type="radio" id="star1half" name="rating" value="1 and a half" (click)="setStar(1.5, 'It could be better.')" />
-                    <label class="half" [ngStyle]="{'color':rating<1.5 ? '#ddd': '#FFD700'}" for="star1half" title="It could be better. - 1.5 stars"></label>
-                    <input type="radio" id="star1" name="rating" value="1" (click)="setStar(1, 'Not so helpful.')" />
-                    <label class="full" [ngStyle]="{'color':rating<1 ? '#ddd': '#FFD700'}" for="star1" title="Not so helpful - 1 star"></label>
-                    <input type="radio" id="starhalf" name="rating" value="half" (click)="setStar(0.5, 'Not so helpful.')" />
-                    <label class="half" [ngStyle]="{'color':rating<0.5 ? '#ddd': '#FFD700'}" for="starhalf" title="Not so helpful - 0.5 stars"></label>
+                <fieldset class="rating rating-row">
+                    <input type="radio" id="star5" name="rating" />
+                    <label class="full" [ngStyle]="{'color':rating<5 ? '#ddd': '#FFD700'}" for="star5" (click)="setStar(5, 'It was very helpful!')"></label>
+                    <input type="radio" id="star4half" name="rating" (click)="setStar(4.5, 'It was very helpful!')">
+                    <label class="half" [ngStyle]="{'color':rating<4.5 ? '#ddd': '#FFD700'}" for="star4half"></label>
+                    <input type="radio" id="star4" name="rating" (click)="setStar(4, 'It was helpful!')" />
+                    <label class="full" [ngStyle]="{'color':rating<4 ? '#ddd': '#FFD700'}" for="star4"></label>
+                    <input type="radio" id="star3half" name="rating" (click)="setStar(3.5, 'It was helpful!')" />
+                    <label class="half" [ngStyle]="{'color':rating<3.5 ? '#ddd': '#FFD700'}" for="star3half"></label>
+                    <input type="radio" id="star3" name="rating" (click)="setStar(3, 'It was okay.')" />
+                    <label class="full" [ngStyle]="{'color':rating<3 ? '#ddd': '#FFD700'}" for="star3"></label>
+                    <input type="radio" id="star2half" name="rating" (click)="setStar(2.5, 'It was okay.')" />
+                    <label class="half" [ngStyle]="{'color':rating<2.5 ? '#ddd': '#FFD700'}" for="star2half"></label>
+                    <input type="radio" id="star2" name="rating" (click)="setStar(2, 'It could be better.')" />
+                    <label class="full" [ngStyle]="{'color':rating<2 ? '#ddd': '#FFD700'}" for="star2"></label>
+                    <input type="radio" id="star1half" name="rating" (click)="setStar(1.5, 'It could be better.')" />
+                    <label class="half" [ngStyle]="{'color':rating<1.5 ? '#ddd': '#FFD700'}" for="star1half"></label>
+                    <input type="radio" id="star1" name="rating" (click)="setStar(1, 'Not so helpful.')" />
+                    <label class="full" [ngStyle]="{'color':rating<1 ? '#ddd': '#FFD700'}" for="star1"></label>
+                    <input type="radio" id="starhalf" name="rating" (click)="setStar(0.5, 'Not so helpful.')" />
+                    <label class="half" [ngStyle]="{'color':rating<0.5 ? '#ddd': '#FFD700'}" for="starhalf"></label>
                 </fieldset>
             </div>
-            <div style="font-size: 12px; font-weight:500; padding-top:12px; margin-left:2px">
+            <div class="rating-hint">
                 <span> {{comments}} </span>
             </div>
         </div>
-        <textarea ref-textarea [(ngModel)]="feedbackText" style="width: 100%; border:white; margin-bottom:-5px; padding:5px 15px 0px 15px; height:60px; font-size:12px"
-            placeholder="Click here to write your review">
+        <textarea class="rating-comments" ref-textarea [(ngModel)]="feedbackText" placeholder="Click here to write your review">
     </textarea>
     </div>
-    <div style="margin-top:5px">
-        <button type="button" class="custom-button custom-button-align-left" (click)="feedbackMessageSubmitted()" style="margin-left:0px">
+    <div class="rating-button">
+        <button type="button" class="custom-button custom-button-align-left" (click)="feedbackMessageSubmitted()">
             Submit
         </button>
         <button type="button" class="custom-button-invert" (click)="cancelButtonClicked()">
@@ -46,6 +45,6 @@
         </button>
     </div>
 </div>
-<div *ngIf="showThanksMessage && !showFeedbackForm" style="margin-top:6px">
+<div class="thanks-message" *ngIf="showThanksMessage && !showFeedbackForm">
     <span>Thanks for your feedback!</span>
 </div>
