Hiding detector heading in cards

--- a/AngularApp/projects/diagnostic-data/src/lib/components/card-selection/card-selection.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/card-selection/card-selection.component.html
@@ -5,7 +5,7 @@
     <div *ngFor="let card of cardSelections"
       class="card-container"  (click)="selectCard(card)">
       <div class="card-header">
-        <span class="fa" [ngClass]="card.icon"></span> {{card.title}}
+        <span class="fa fa-bar-chart"></span> {{card.title}}
       </div>
       <div class="card-description">
         <ul>
