--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="detectorDataLocalCopy">
-  <div>
+  <div *ngIf="!hideDetectorHeader">
     <section class="content-header">
       <h1 *ngIf="!isSystemInvoker">
         <span *ngIf="!insideDetectorList">{{detectorDataLocalCopy.metadata.name}}</span>
@@ -42,8 +42,9 @@
         </div>
       </div>
     </section>
+    <hr>
   </div>
-  <hr>
+
   <div *ngFor="let data of detectorDataLocalCopy.dataset" class="dynamic-data-container">
     <dynamic-data [diagnosticData]="data" [startTime]="startTime" [endTime]="endTime" [detectorEventProperties]="detectorEventProperties"></dynamic-data>
   </div>
