--- a/AngularApp/projects/diagnostic-data/src/lib/components/card-selection/card-selection.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/card-selection/card-selection.component.html
@@ -1,4 +1,4 @@
-<div>
+<div style="margin-top: 25px;">
   <h2>Select the statement that best describes your problem:</h2>
 
   <div class="card-flex">
