--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-container/detector-container.component.html
@@ -1,5 +1,4 @@
-<detector-control></detector-control>
-{{navigator.lastDetector}}
+<detector-control *ngIf="!hideDetectorControl && detectorResponse"></detector-control>
 <div style="padding:0px 20px">
   <detector-view [detectorResponse]="detectorResponse" [error]="error" [startTime]="detectorControlService.startTime" [endTime]="detectorControlService.endTime">
   </detector-view>
