--- a/AngularApp/projects/diagnostic-data/src/lib/components/guage-control/guage-control.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/guage-control/guage-control.component.scss
@@ -1,32 +1,34 @@
-.guageComponent-verticalContainer{
+.vertical-container{
 	display:flex;
 	flex-direction: column ;
 }
 
 
-.guageComponent-horizontalContainer{
+.horizontal-container{
 	display:flex;
 	flex-direction: row ;	
 	flex-wrap: wrap;
-	align-items:flex-end;
+	align-items:center;
 }
 
-.guageComponent-guageIterator{
+.guage-iterator{
 	padding:10px;
 }
 
 
-.guageComponent-guageElementContainer{
+.guage-container{
 	display:flex;
 	flex-direction:row;
-	width:100%;
+	width:100%;	
+	border: solid lightgrey 2px;
+	border-radius: 15px	
 }
-.guageComponent-guageElementGraphicContainer
+.guage-graphic-container
 {
 	padding:10px;
 }
 
-.guageComponent-guageElementDescription{
+.guage-description{
 	width:100%;
 	padding:10px;
 }
