--- a/AngularApp/projects/diagnostic-data/src/lib/components/guage-graphic/guage-graphic.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/guage-graphic/guage-graphic.component.html
@@ -1,10 +1,14 @@
-<div class="guageGraphic-container" [style.width.px] = "guageGraphic.width" [style.height.px] = "guageGraphic.height">	
-	<div class="guageGraphic-guagueContainer">
-	  <div class="guageGraphic-circleBackGround"></div>
-	  <div class="guageGraphic-circleCenter"></div>
-	  <div class="guageGraphic-circleFill" [style.background-color] = "guageGraphic.fillColor" [style.transform] = "guageGraphic.transformString"></div>
-	  <div class="guageGraphic-circleData"><markdown [data]="guageGraphic.numberDisplay"></markdown></div>
-	  <div class = "guageGraphic-needle" [style.transform] = "guageGraphic.transformString"></div>
-  </div>
-  <div #Label class="guageGraphic-label"> <markdown [data]="guageGraphic.label"></markdown></div>
+<div class="container" [style.width.px]="guageGraphic.width" [style.height.px]="guageGraphic.height">
+	<div class="graphic-container">
+		<div class="circle-background"></div>
+		<div class="circle-center"></div>
+		<div class="circle-fill" [style.background-color]="guageGraphic.fillColor" [style.transform]="guageGraphic.transformString"></div>
+		<div class="circle-data">
+			<markdown [data]="guageGraphic.numberDisplay"></markdown>
+		</div>
+		<div class="needle" [style.transform]="guageGraphic.transformString"></div>
+	</div>
+	<div #Label class="label">
+		<markdown [data]="guageGraphic.label"></markdown>
+	</div>
 </div>
