--- a/AngularApp/projects/diagnostic-data/src/lib/components/guage-control/guage-control.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/guage-control/guage-control.component.html
@@ -16,7 +16,7 @@
   <div *ngIf="isHorizontal(guage.renderDirection)">
     <div class="horizontal-container">
       <div class="guage-iterator" *ngFor="let currGuage of guage.guages">
-        <div class="guage-container" style="flex-direction:column">
+        <div class="guage-container" style="flex-direction:column;">
           <div *ngIf="currGuage.guageGraphicElement" class="guage-graphic-container">
             <guage-graphic [guageGraphic]="currGuage.guageGraphicElement"></guage-graphic>
           </div>
@@ -27,5 +27,4 @@
       </div>
     </div>
   </div>
-
 </div>
