--- a/AngularApp/projects/diagnostic-data/src/lib/components/guage-control/guage-control.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/guage-control/guage-control.component.scss
@@ -3,7 +3,6 @@
 	flex-direction: column ;
 }
 
-
 .horizontal-container{
 	display:flex;
 	flex-direction: row ;	
@@ -15,13 +14,13 @@
 	padding:10px;
 }
 
-
 .guage-container{
 	display:flex;
 	flex-direction:row;
 	width:100%;	
 	border: solid lightgrey 2px;
-	border-radius: 15px	
+	border-radius: 15px;
+	align-items:center;
 }
 .guage-graphic-container
 {
