--- a/AngularApp/projects/diagnostic-data/src/lib/components/guage-graphic/guage-graphic.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/guage-graphic/guage-graphic.component.scss
@@ -1,3 +1,4 @@
+@import "../../../../../app-service-diagnostics/src/styles.scss";
 
 .needle{
     z-index: 5;
@@ -41,18 +42,15 @@
   .circle-fill{
     z-index: 2;
     position: absolute;
-    background-color: #5664F9;
     width: 100%;/*same as GuageContainer*/
     height: 100%;/*same as GuageContainer*/
     top: 100%; /*same as height of GuageContainer so that div goes below the GuageContainer*/
     margin-left: auto;
     margin-right: auto;
-    border-radius: 0px 0px 1500px 1500px; /*This makes the semi circle below*/  /*0 0 height height*/ /*For now, have a very large number. Since this height as per the current settings will never be 1500 px*/
-    
+    border-radius: 0px 0px 1500px 1500px; /*This makes the semi circle below*/  /*0 0 height height*/ /*For now, have a very large number. Since this height as per the current settings will never be 1500 px*/    
     transform-origin: center top;
     transition: all 1.3s ease-in-out;
-    transform:rotate(.11turn);/*0.005 = 1 %*/
-    
+    transform:rotate(.11turn);/*0.005 = 1 %*/    
   }
   
   .circle-background{
@@ -65,19 +63,15 @@
     border-radius: 1500px 1500px 0px 0px;  /*height height 0 0*/  /*For now, have a very large number. Since this height as per the current settings will never be 1500 px*/
   }
   
-  
   .graphic-container{	
     width: 100%;
     height: 80%;
     position: absolute;
-    /*.top: 30%;*/
-    /*.left: 25%;*/
     overflow: hidden;
     text-align: center;  
-  }
+  }  
   
-  
-  .container{  
+  .outer-container{  
     width: 200px;
     height: 125px; /*Height is 62.5 % of the width*/
     position: relative;  
