--- a/AngularApp/projects/diagnostic-data/src/lib/components/guage-graphic/guage-graphic.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/guage-graphic/guage-graphic.component.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="needle" [style.transform]="guageGraphic.transformString"></div>
 	</div>
-	<div #Label class="label">
+	<div #Label class="guage-label">
 		<markdown [data]="guageGraphic.label"></markdown>
 	</div>
 </div>
