--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
@@ -1,5 +1,5 @@
-<!-- This is the common template for rendering insights. 
-     If there is a title I will wrap it in a container, 
+<!-- This is the common template for rendering insights.
+     If there is a title I will wrap it in a container,
      otherwise I will show it by itself -->
 <ng-template #insightView>
   <div *ngFor="let insight of insights" class="insight-container">
@@ -46,6 +46,9 @@
           </tbody>
         </table>
       </div>
+    </div>
+    <div class="insight-goes-here">
+      {{insight.solutions[0].Title}}
     </div>
   </div>
 </ng-template>
