Simple solutions show in UI

--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -1,26 +1,13 @@
 <div class="prototype-container">
 
-  <div class="explanation-header">
-    <h2>Solutions</h2>
-  </div>
-
   <div class="solution-action mb-2">
-    <markdown ngPreserveWhitespaces>
-      #### Restart Application
-      Restarting the application can fix the following issues:
-      - System out of memory
-      - Reload configurations
-    </markdown>
-    <br>
     <button class="custom-button" [disabled]="acceptRisk === false">Restart</button>
   </div>
 
   <div class="solution-warning">
-    <span class="message-warning bold">This action may cause downtime.</span>
-    <br>
     <label>
       <input type="checkbox" ng-checked="acceptRisk" (change)="checkAcceptRisk()" name="Accept">
-      <span class="text-value">I accept the risk of downtime</span>
+      <span class="message-warning bold">I accept the risk of downtime</span>
     </label>
   </div>
 
