--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-trace-tool/network-trace-tool.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-trace-tool/network-trace-tool.component.html
@@ -20,8 +20,8 @@
             encrypted.</li>
         <li>Network traces are collected on all the instance(s) serving your App.</li>
         <li>To analyze the Network Trace, you need tools like
-            <a href='https://www.microsoft.com/en-in/download/details.aspx?id=4865'>Network Monitor </a> or
-            <a href='https://www.wireshark.org/'>Wireshark</a> that can open the network captures. </li>
+            <a href='https://www.microsoft.com/en-in/download/details.aspx?id=4865' target="_blank">Network Monitor </a> or
+            <a href='https://www.wireshark.org/' target="_blank">Wireshark</a> that can open the network captures. </li>
     </ul>
 
     <div *ngIf="!checkingValidity && networkTraceDisabled">
@@ -49,7 +49,7 @@
     <div *ngIf="!checkingValidity && !networkTraceDisabled && status < NetworkTraceStatus.Started">
         
         <div class="pastNetworkTracesMessage">
-            View past collected Network traces in <strong>{{traceLocation}}</strong> folder in <a href='https://{{scmPath}}'>Kudu
+            View past collected Network traces in <strong>{{traceLocation}}</strong> folder in <a href='https://{{scmPath}}' target="_blank">Kudu
                 Console</a> for the App.
         </div>
 
@@ -79,7 +79,7 @@
                 <div *ngIf="durationRemaining > 0" style="display: table-cell;">
                     Network trace started and will automatically stop after
                     <strong>{{ durationRemaining }}</strong> seconds. Network traces collected will be available in
-                    <strong>{{traceLocation}}</strong> folder in <a href='https://${this.scmPath}'>Kudu Console</a> for
+                    <strong>{{traceLocation}}</strong> folder in <a href='https://${this.scmPath}' target="_blank">Kudu Console</a> for
                     the App.
                 </div>
                 <div *ngIf="durationRemaining <= 0" style="display: table-cell;">
@@ -96,7 +96,7 @@
                 Network trace collection completed.
                 <ul>
                     <li *ngFor="let file of files">
-                        <a href="{{ file.url}}"> {{ file.name }}</a>
+                        <a href="{{ file.url}}" target="_blank"> {{ file.name }}</a>
                     </li>
                 </ul>
             </div>
