Can read and display solution data nested in an insight

--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="solutions">
-        <solution *ngFor="let solution of insight.solutions;"></solution>
+        <solution *ngFor="let solution of insight.solutions;" [solution]="solution"></solution>
       </div>
     </div>
   </div>
