--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -1,25 +1,23 @@
 <div class="prototype-container">
 
-  <h3>{{solution.Title}}</h3>
-
-  <markdown *ngFor="let description of solution.Descriptions">
-    {{description}}
-  </markdown>
-  <br />
-
-  <div class="solution-action mb-2">
-    <button type="button" (click)="performAction()" class="custom-button"
-        [disabled]="acceptRisk === false">
-      Restart
-    </button>
+  <div class="solution-title">
+    <h2>{{solution.Title}}</h2>
   </div>
 
-  <div class="solution-warning" *ngIf="solution.RequiresConfirmation">
-    <label>
-      <input type="checkbox" ng-checked="acceptRisk" (change)="checkAcceptRisk()"
-          name="Accept">
-      <span class="message-warning bold">I accept the risk of downtime</span>
-    </label>
+  <div class="solution-description">
+    <markdown *ngFor="let description of solution.Descriptions">
+      {{description}}
+    </markdown>
+  </div>
+
+  <div class="solution-action">
+    <h2>Restart Site?</h2>
+    <div class="action-buttons">
+      <button type="button" class="custom-button deny">No, Don't Restart</button>
+      <button type="button" (click)="performAction()" class="custom-button confirm">
+        Yes, Restart Site
+      </button>
+    </div>
   </div>
 
 </div>
