--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -8,11 +8,11 @@ html, body {
 .prototype-container {
   min-height: 10px;
   margin: 0;
-  padding: 10px 0px;
+  padding: 10px 0;
+}
 
-  .solution-action {
-    display: inline-block;
-  }
+.solution-title {
+  padding: 0 1em;
 }
 
 markdown {
@@ -21,16 +21,44 @@ markdown {
   }
 }
 
-.explanation-header {
-  background-color: $back-bar-color;
-  margin: 0;
-  padding: 0;
+.solution-description {
+  background-color: whitesmoke;
+  border-top: 1px solid darkgray;
+  border-bottom: 1px solid darkgray;
+  padding: 1em 2em;
+  margin: 1em 0;
 }
 
-label {
-  .message-warning {
-    padding-left: .5em;
-    color: $warning-color;
-    font-size: 12px;
+.solution-action {
+  display: inline-block;
+  padding: 0 1em;
+
+  h2 {
+    margin-right: 1em;
   }
+
+  .custom-button {
+    border: 1px solid darkgray;
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+
+  .custom-button.confirm {
+    background-color: red;
+    font-weight: bold;
+    color: white;
+    margin-left: 0;
+  }
+
+  .custom-button.deny {
+    background-color: white;
+    color: gray;
+    margin-right: .25em;
+    margin-left: 0;
+  }
+}
+
+.action-buttons {
+  display: inline-block;
+  margin: 0;
 }
