--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -44,9 +44,9 @@ markdown {
   }
 
   .custom-button.confirm {
-    background-color: red;
+    background-color: #b71c1c;
     font-weight: bold;
-    color: white;
+    color: #fafafa;
     margin-left: 0;
   }
 
