Only show description markdown if there are any descriptions provided

--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -4,7 +4,7 @@
     <h2>{{solution.Title}}</h2>
   </div>
 
-  <div class="solution-description">
+  <div *ngIf="solution.Descriptions && solution.Descriptions.length !== 0" class="solution-description">
     <markdown *ngFor="let description of solution.Descriptions">
       {{description}}
     </markdown>
