--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -33,8 +33,9 @@ markdown {
   display: inline-block;
   padding: 0 1em;
 
-  h2 {
+  h3 {
     margin-right: 1em;
+    display: inline;
   }
 
   .custom-button {
