--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.html
@@ -5,12 +5,12 @@
   <div *ngFor="let insight of insights" class="insight-container">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h5 class="panel-title" [class.clickable-header]="insight.hasData()" (click)="toggleInsightStatus(insight)">
+        <h5 class="panel-title" [class.clickable-header]="hasContent(insight)" (click)="toggleInsightStatus(insight)">
           <span class="fa status-icon" [class.fa-exclamation-circle]="insight.status === InsightStatus.Critical"
             [class.fa-exclamation-triangle]="insight.status === InsightStatus.Warning" [class.fa-check-circle]="insight.status === InsightStatus.Success"
             [class.fa-info-circle]="insight.status === InsightStatus.Info"></span>
           {{insight.title}}
-          <span *ngIf="insight.hasData()" class="fa expand-icon" [class.fa-angle-down]="!insight.isExpanded"
+          <span *ngIf="hasContent(insight)" class="fa expand-icon" [class.fa-angle-down]="!insight.isExpanded"
             [class.fa-angle-up]="insight.isExpanded"></span>
         </h5>
         <div class="pull-right" style="margin-top:-18px">
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <div class="panel-body" *ngIf="insight.isExpanded">
+      <div class="panel-body" *ngIf="insight.isExpanded && insight.hasData()">
         <table>
           <tbody>
             <tr *ngFor="let key of insight.getKeys()">
@@ -47,7 +47,7 @@
         </table>
       </div>
 
-      <div class="solutions">
+      <div class="solutions" *ngIf="insight.isExpanded">
         <solution *ngFor="let solution of insight.solutions;" [solution]="solution"></solution>
       </div>
     </div>
