Fix content alignment in solution

--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -1,4 +1,4 @@
-<div class="prototype-container">
+<div class="solution-container">
 
   <div class="solution-title">
     <h2>{{solution.Title}}</h2>
