--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -5,28 +5,20 @@ html, body {
   padding: 0;
 }
 
-.prototype-container {
-  min-height: 10px;
-  margin: 0;
-  padding: 10px 0;
+.solution-container {
+  margin: 1em;
 }
-
-.solution-title {
-  padding: 0 1em;
-}
-
 
 .solution-description {
   background-color: whitesmoke;
   border-top: 1px solid darkgray;
   border-bottom: 1px solid darkgray;
-  padding: 1em 2em;
+  padding: 1em 0;
   margin: 1em 0;
 }
 
 .solution-action {
   display: inline-block;
-  padding: 0 1em;
 
   h3 {
     margin-right: 1em;
@@ -64,10 +56,9 @@ html, body {
 }
 
 .internal-instructions {
-  padding: 0 1em;
-
   .markdown {
     border: 1px dotted black;
+    padding: .5em;
   }
 }
 
